# Garage133

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  build-svelte.sh  build_svelte.py  local.ini.example  platformio.ini  secrets-ota.ini.example  secrets.ini.example
.github/workflows/: platformio-run.yaml
KiCAD/: Garage133.csv  Garage133.kicad_pcb  Garage133.kicad_prl  Garage133.kicad_pro  Garage133.kicad_sch  Garage133.xml  cl33mos.kicad_sch  fp-info-cache  relay1.kicad_sch
analysis/: STRATEGY.md  download.sh  interactive.sh  test_hmm.sh  train-hmm.sh
analysis/download/: README.md  config.toml  pyproject.toml
analysis/download/src/download/: config_utils.py  download.py  interactive.py
analysis/download/tests/: __init__.py
analysis/training/: README.md  pyproject.toml
analysis/training/src/training/: test_hmm.py  train_hmm.py
scad/SonarBox/: ball_and_socket.scad  ball_and_socket.stl  socket_mount.scad  socket_mount.stl  socket_test.scad  socket_test.stl  sonar_box.scad  sonar_box_bottom.scad  sonar_box_bottom.stl  sonar_box_test.scad  sonar_box_top.scad  sonar_box_top.stl
scad/box/: Garage133.stl  Garage133_test.scad  board.scad  box.scad  box_bottom.scad  box_bottom.stl  box_top.scad  box_top.stl  gui.py  gui.scad
src/: hmm.h  main.cpp
svelte/: index.html  package-lock.json  package.json
svelte/src/: App.svelte
svelte/src/components/: Navbar.svelte  Sidebar.svelte
svelte/src/pages/: DoorDetailPage.svelte  GaragePage.svelte  MQTTConfigPage.svelte  ModelsPage.svelte  WiFiConfigPage.svelte
test/test_hmm/: test_hmm.cpp
util/: check.sh  license-headers-py.sh  license-headers.sh  license_header_py.txt
