[project]
name = "training"
version = "0.1.0"
description = "HMM training module for Garage133 sonar classification"
authors = [
    {name = "Chris Lee", email = "lee.chris.h@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"

[tool.poetry]
packages = [{include = "training", from = "src"}]

[tool.poetry.dependencies]
pandas = "^2.2.0"
numpy = "^2.0.0"
PyYAML = "^6.0.1"
matplotlib = "^3.10.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
lint.select = [
    "E",    # pycodestyle
    "F",    # Pyflakes
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",    # isort
    "RUF",  # Ruff-specific rules
    "PLC",  # Pylint convention
    "PLE",  # Pylint error
    "PLW",  # Pylint warning
]

[tool.ruff.format]
docstring-code-format = true

